bug fix java security manaager